Make it compile with Java21